CHANGES
*******

0.2 (unreleased)
================

- Python 3 support, in particular Python 3.4 (Alec Munro - fudomunro
  on github)

- Link generation now takes ``SCRIPT_NAME`` into account.

- Installation documentation tweaks. (Auke Willem Oosterhoff)

- .gitignore tweaks (Auke Willem Oosterhoff)

0.1 (2014-04-08)
================

- Initial public release.